20090713	Beginning on an a.out FileLoader for the new framework.
20090714	Continuing on the a.out FileLoader.
20090716	a.out (big-endian only so far) can now be loaded into
		AddressDataBus objects.
		Modifying the "load" command so that it can load both component
		trees _and_ other binaries (ELFs etc) into components.
		Merging in a lot of TODO entries from the old C++ branch's TODO
		file.
20090717	Implementing the 'move' command for moving components.
		Removing the 'dirty flag' concept (it wasn't really used).
		Adding a .dump method to the RAMComponent, for dumping raw
		(physical) memory contents.
		Adding a similar .dump method to the CPUComponent, for dumping
		the virtual memory space. (Note that this can have side
		effects, when reading from devices...)
		Implementing the 'copy' command, for cloning components.
20090718	Updating the man page to reflect new command line options vs
		legacy options.
		Adding a .registers method to the CPUComponent for dumping CPU
		registers; implementing specifics for MIPS and M88K.
		Enabling simple variable assignment [again].
		Implementing (in a ugly hack-ish way) serialization support
		for the RAM component, using a "custom" StateVariable type.
		Beginning to implement a "pre run check" mechanism.
20090720	Implementing PreRunCheck for CPU components (they need to have
		an address/data bus, either as a child or as a parent, to run).
20090721	Implementing PreRunCheck for MainBusComponent.
		At startup, a suitable part of the component tree is now shown.
		Adding a GenerateShortestPossiblePath method on Component.
		Adding a helper for outputting pre-0.6.0 style debug messages
		from components ("[ componentname: message ]").
		Tab completion (in the CommandInterpreter) now uses shortest
		path, whenever possible, instead of full paths.
20090722	Implementing a new concept of "on reset commands"; beginning on
		extending the ELF loader for symbol loading support.